fix: cursor hidden on small devices

--- a/refactor/style.css
+++ b/refactor/style.css
@@ -2460,6 +2460,10 @@ footer {
 }
 
 @media (max-width: 728px) {
+  .cursor {
+    display: none;
+  }
+
   /***** Home *****/
   #home {
     padding: 0;
